Fix input field bg color problem in dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -273,7 +273,9 @@ input::placeholder,
 textarea::placeholder {
   color: #626161;
 }
-
+input {
+  background-color: white;
+}
 .optionsRow > p,
 .optionsRow > label {
   color: #626161;
